crates/fig-parser/tests/snapshots/integration_tests__variables__const_generic.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Const:
      visibility: Default
      annotations: []
      generic_params:
        - Type:
            name: U
            bounds: []
            default_type: ~
        - Type:
            name: V
            bounds: []
            default_type: ~
      receiver:
        - name: either_ns
          generic_args: []
        - name: Either
          generic_args:
            - Path:
                segments:
                  - U
                generic_args: []
            - Path:
                segments:
                  - V
                generic_args: []
      name: DEFAULT
      ty: U32
      value:
        IntegerLiteral:
          base: Decimal
          digits: "0"
          suffix: ~
  - Const:
      visibility: Default
      annotations: []
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      receiver:
        - name: something
          generic_args: []
        - name: Option
          generic_args:
            - Path:
                segments:
                  - T
                generic_args: []
      name: A_CONST_VALUE
      ty: Bool
      value:
        BooleanLiteral: false
