crates/fig-parser/tests/snapshots/integration_tests__variables__const_no_type.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Const:
      visibility: Default
      annotations: []
      generic_params: []
      receiver: []
      name: MAX_SIZE
      ty: ~
      value:
        IntegerLiteral:
          base: Decimal
          digits: "1024"
          suffix: ~
  - Const:
      visibility: Default
      annotations: []
      generic_params: []
      receiver: []
      name: DEFAULT_PORT
      ty: ~
      value:
        IntegerLiteral:
          base: Decimal
          digits: "8080"
          suffix: ~
  - Const:
      visibility: Default
      annotations: []
      generic_params: []
      receiver: []
      name: PI
      ty: ~
      value:
        FloatLiteral:
          digits: "3.14159"
          exponent: ~
          suffix: ~
  - Const:
      visibility: Default
      annotations: []
      generic_params: []
      receiver: []
      name: ENABLED
      ty: ~
      value:
        BooleanLiteral: true
