crates/fig-parser/tests/snapshots/integration_tests__variables__const_with_type.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Const:
      visibility: Default
      annotations: []
      generic_params: []
      receiver: []
      name: MAX_SIZE
      ty: U32
      value:
        IntegerLiteral:
          base: Decimal
          digits: "1024"
          suffix: ~
  - Const:
      visibility: Default
      annotations: []
      generic_params: []
      receiver: []
      name: DEFAULT_PORT
      ty: U16
      value:
        IntegerLiteral:
          base: Decimal
          digits: "8080"
          suffix: ~
  - Const:
      visibility: Default
      annotations: []
      generic_params: []
      receiver: []
      name: PI
      ty: F64
      value:
        FloatLiteral:
          digits: "3.14159265358979"
          exponent: ~
          suffix: ~
  - Const:
      visibility: Default
      annotations: []
      generic_params: []
      receiver: []
      name: ENABLED
      ty: Bool
      value:
        BooleanLiteral: true
  - Const:
      visibility: Default
      annotations: []
      generic_params: []
      receiver: []
      name: ZERO
      ty: USize
      value:
        IntegerLiteral:
          base: Decimal
          digits: "0"
          suffix: ~
